package main

import (
	"context"
	"net/http"
	"net/http/httptest"
	"testing"

	"sutext.github.io/cable/cluster"
	clusterpb "sutext.github.io/cable/cluster/pb"
	"sutext.github.io/cable/packet"
	"sutext.github.io/cable/server"
)

// TestHTTPHandlers tests the HTTP handlers
func TestHTTPHandlers(t *testing.T) {
	// Test health endpoint handler logic
	t.Run("TestHealthHandlerLogic", func(t *testing.T) {
		// Create a mock response writer
		w := httptest.NewRecorder()

		// Create a request
		req, err := http.NewRequest("GET", "/health", nil)
		if err != nil {
			t.Fatal(err)
		}

		// Create a test httpServer with a mock broker that is ready
		handler := &httpServer{
			broker: &mockBroker{isReady: true},
		}

		// Call the handler directly
		handler.handleHealth(w, req)

		if w.Code != http.StatusOK {
			t.Errorf("Expected status 200, got %d", w.Code)
		}

		expected := "ok"
		if w.Body.String() != expected {
			t.Errorf("Expected %q, got %q", expected, w.Body.String())
		}
	})

	// Test health endpoint when broker is not ready
	t.Run("TestHealthHandlerNotReady", func(t *testing.T) {
		// Create a mock response writer
		w := httptest.NewRecorder()

		// Create a request
		req, err := http.NewRequest("GET", "/health", nil)
		if err != nil {
			t.Fatal(err)
		}

		// Create a test httpServer with a mock broker that is not ready
		handler := &httpServer{
			broker: &mockBroker{isReady: false},
		}

		// Call the handler directly
		handler.handleHealth(w, req)

		if w.Code != http.StatusInternalServerError {
			t.Errorf("Expected status 500, got %d", w.Code)
		}
	})
}

// mockBroker is a minimal mock for testing
// It only implements the necessary methods for the tests

type mockBroker struct {
	isReady bool
}

type mockCluster struct {
	ready bool
}

func (m *mockCluster) IsReady() bool {
	return m.ready
}

func (m *mockCluster) KickBroker(ctx context.Context, id uint64) error {
	return nil
}

func (m *mockCluster) AddBroker(ctx context.Context, id uint64, addr string) error {
	return nil
}

func (m *mockBroker) Cluster() cluster.Cluster {
	return &mockCluster{ready: m.isReady}
}

// Implement the minimal required methods for the tests
func (m *mockBroker) IsOnline(ctx context.Context, userID string) bool {
	return false
}

func (m *mockBroker) KickUser(ctx context.Context, userID string) {
	// Do nothing
}

func (m *mockBroker) Inspects(ctx context.Context) ([]*clusterpb.Status, error) {
	return []*clusterpb.Status{}, nil
}

func (m *mockBroker) Start() {
	// Do nothing
}

func (m *mockBroker) Shutdown(ctx context.Context) error {
	return nil
}

func (m *mockBroker) SendToAll(ctx context.Context, msg *packet.Message) (int32, int32, error) {
	return 0, 0, nil
}

func (m *mockBroker) SendToUser(ctx context.Context, userID string, msg *packet.Message) (int32, int32, error) {
	return 0, 0, nil
}

func (m *mockBroker) SendToChannel(ctx context.Context, channel string, msg *packet.Message) (int32, int32, error) {
	return 0, 0, nil
}

func (m *mockBroker) JoinChannel(ctx context.Context, userID string, channels map[string]string) error {
	return nil
}

func (m *mockBroker) LeaveChannel(ctx context.Context, userID string, channels map[string]string) error {
	return nil
}

func (m *mockBroker) ListUsers(ctx context.Context, brokerID uint64) (map[string]map[string]string, error) {
	return nil, nil
}

func (m *mockBroker) HandleRequest(method string, handler server.RequestHandler) {
	// Do nothing
}
